New Project Start Reset

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,6 @@
+/* CSS file for Susan's Portfolio website */
+
 body {
-    background-color: #EAF6F6;
+    background-color: blue;
 }
 
-hr {
-    border-color: lightgrey;
-    border-width: 4px;
-    border-style: dotted none none;
-    width: 5%;
-
-
-}
-
-img {
-    height: 200px;
-    width: 200px;
-}
-
-h1, h3 {
-    color: #66BFBF;
-}
