--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,28 @@
 /* CSS file for Susan's Portfolio website */
 
 body {
-    background-color: blue;
+    margin: 0;
+} 
+
+h1 {
+    margin-top: 0;
+}
+
+
+
+.top-container {
+    background-color: #E4F9F5;
+}
+
+.middle-container {
+    background-color: #30E3CA;
+    height: 200px;
+    width: 200px;
+}
+
+.bottom-container {
+    background-color: #40514E;
+    height: 200px;
+    width: 200px;
 }
 
