--- a/css/styles.css
+++ b/css/styles.css
@@ -2,16 +2,30 @@
 
 body {
     margin: 0;
-} 
+    text-align: center;
+    font-family: 'Merriweather', serif;
+}
 
 h1 {
     margin-top: 0;
+    font-family: 'Sacramento', cursive;
+
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 
 
 .top-container {
     background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
 }
 
 .middle-container {
@@ -26,3 +40,18 @@ h1 {
     width: 200px;
 }
 
+.top-cloud {
+    position: absolute;
+    right: 700px;
+    top: 50px;
+
+
+
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 700px;
+    bottom: 300px;
+
+}
