--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,25 @@ body {
     font-family: 'Merriweather', serif;
 }
 
+h1, h2 {
+    color: #66BFBF;
+}
+
+h3, a {
+    color: #11999E;
+}
+
 h1 {
+    font-size: 5.625rem;
     margin-top: 0;
     font-family: 'Sacramento', cursive;
+    margin: 50px auto 0 auto;
 
 }
 
 h2 {
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
 }
 
 h3 {
