--- a/css/styles.css
+++ b/css/styles.css
@@ -1,64 +1,152 @@
 /* CSS file for Susan's Portfolio website */
 
 body {
-    margin: 0;
-    text-align: center;
-    font-family: 'Merriweather', serif;
+  margin: 0;
+  text-align: center;
+  font-family: "Merriweather", serif;
 }
 
-h1, h2 {
-    color: #66BFBF;
+h1,
+h2 {
+  color: #66bfbf;
 }
 
-h3, a {
-    color: #11999E;
+h3,
+a {
+  color: #11999e;
 }
 
 h1 {
-    font-size: 5.625rem;
-    margin-top: 0;
-    font-family: 'Sacramento', cursive;
-    margin: 50px auto 0 auto;
-
+  font-size: 5.625rem;
+  margin-top: 0;
+  font-family: "Sacramento", cursive;
+  margin: 50px auto 0 auto;
 }
 
 h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+}
+
+#title-sub {
+  position: relative;
+  bottom: 68px;
 }
 
 h3 {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
-
-
 
 .top-container {
-    background-color: #E4F9F5;
-    position: relative;
-    padding-top: 100px;
+  background-color: #eaf6f6;
+  position: relative;
+  padding-top: 100px;
 }
 
-.middle-container {
- 
+.middle-container .profile img {
+  width: 15%;
 }
 
 .bottom-container {
+    background-color: #66BFBF;
+    padding: 80px;
+}
 
+.footer-link {
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 25px;
+    
+    
+}
+
+hr {
+    border: none;
+    border-top: 8px dotted #eaf6f6;
+    width: 5%;
+}
+
+.profile {
+    margin: 100px auto;
+}
+
+.profile-description {
+    color: #40514e;
 }
 
 .top-cloud {
-    position: absolute;
-    right: 400px;
-    top: 50px;
-
-
-
+  position: absolute;
+  right: 400px;
+  top: 50px;
 }
 
 .bottom-cloud {
-    position: absolute;
-    left: 400px;
-    bottom: 300px;
-
+  position: absolute;
+  left: 400px;
+  bottom: 300px;
 }
+
+.skills {
+    margin: 100px auto;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto;
+  line-height: 2;
+  text-align: left;
+}
+
+.coding-image,
+.art-image {
+  width: 25%;
+}
+
+.coding-image {
+    float: left;
+    margin-right: 30px;
+}
+
+.art-image {
+    float: right;
+    margin-left: 30px;
+}
+
+.contact-me {
+    margin: 100px auto;
+}
+
+.contact-me p {
+    margin: 50px auto;
+}
+
+.btn {
+    
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+
+
