--- a/css/styles.css
+++ b/css/styles.css
@@ -49,30 +49,22 @@ h3 {
 }
 
 .bottom-container {
-    background-color: #66BFBF;
-    padding: 80px;
-}
-
-.footer-link {
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 25px;
-    
-    
+  background-color: #66bfbf;
+  padding: 70px;
 }
 
 hr {
-    border: none;
-    border-top: 8px dotted #eaf6f6;
-    width: 5%;
+  border: none;
+  border-top: 8px dotted #eaf6f6;
+  width: 5%;
 }
 
 .profile {
-    margin: 100px auto;
+  margin: 100px auto;
 }
 
 .profile-description {
-    color: #40514e;
+  color: #40514e;
 }
 
 .top-cloud {
@@ -88,7 +80,7 @@ hr {
 }
 
 .skills {
-    margin: 100px auto;
+  margin: 100px auto;
 }
 
 .skill-row {
@@ -104,49 +96,59 @@ hr {
 }
 
 .coding-image {
-    float: left;
-    margin-right: 30px;
+  float: left;
+  margin-right: 30px;
 }
 
 .art-image {
-    float: right;
-    margin-left: 30px;
+  float: right;
+  margin-left: 30px;
 }
 
 .contact-me {
-    margin: 100px auto;
+  margin: 50px auto;
 }
 
 .contact-me p {
-    margin: 50px auto;
+  margin: 50px auto;
+}
+
+.footer-link {
+  position: relative;
+  bottom: 20px;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 25px;
 }
 
 .btn {
-    
-    background: #11cdd4;
-    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
-    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-    -webkit-border-radius: 8;
-    -moz-border-radius: 8;
-    border-radius: 8px;
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-  }
-  
-  .btn:hover {
-    background: #30e3cb;
-    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
-    text-decoration: none;
-  }
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
 
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
 
+.copyright {
+  color: #eaf6f6;
+  font-size: 14px;
+}
