--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
 /* CSS file for Susan's Portfolio website */
 
 body {
+  color: #40514e;
   margin: 0;
   text-align: center;
   font-family: "Merriweather", serif;
+}
+
+p {
+  line-height: 1.7;
 }
 
 h1,
@@ -27,21 +32,33 @@ h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
-}
-
-#title-sub {
-  position: relative;
-  bottom: 68px;
+  padding-bottom: 10px;
 }
 
 h3 {
   font-family: "Montserrat", sans-serif;
 }
 
+hr {
+  border: none;
+  border-top: 6px dotted #eaf6f6;
+  width: 4%;
+  margin: 100px auto;
+}
+
+#title-sub {
+  position: relative;
+  bottom: 65px;
+}
+
 .top-container {
   background-color: #eaf6f6;
   position: relative;
   padding-top: 100px;
+}
+
+.middle-container {
+  margin: 100px 0;
 }
 
 .middle-container .profile img {
@@ -54,29 +71,21 @@ h3 {
   padding-bottom: 50px;
 }
 
-hr {
-  border: none;
-  border-top: 8px dotted #eaf6f6;
-  width: 5%;
-}
-
-.profile {
-  margin: 100px auto;
-}
 
 .profile-description {
-  color: #40514e;
+  width: 30%;
+  margin: auto;
 }
 
 .top-cloud {
   position: absolute;
-  right: 400px;
+  right: 350px;
   top: 50px;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 400px;
+  left: 350px;
   bottom: 300px;
 }
 
@@ -85,7 +94,6 @@ hr {
 .skill-row {
   width: 50%;
   margin: 100px auto;
-  line-height: 2;
   text-align: left;
   padding-bottom: 75px;
 }
@@ -105,21 +113,25 @@ hr {
   margin-left: 30px;
 }
 
-.contact-me {
-  margin: 100px auto;
-}
 
-.contact-me p {
-  margin: 50px auto;
+.contact-msg {
+  width: 40%;
+  margin: 40px auto 60px;
 }
 
 .footer-link {
-  position: relative;
-  bottom: 20px;
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
   text-decoration: none;
   font-weight: 500;
-  margin-left: 25px;
+  margin: 10px 20px;
 }
+
+.footer-link:hover {
+  color: #eaf6f6;
+}
+
+
 
 .btn {
   background: #11cdd4;
@@ -131,7 +143,7 @@ hr {
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family: Arial;
+  font-family: "Montserrat", sans-serif;
   color: #ffffff;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
@@ -150,5 +162,6 @@ hr {
 
 .copyright {
   color: #eaf6f6;
-  font-size: 14px;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
