--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 1.5rem;
   font-weight: normal;
-  padding-bottom: 10px;
+/*   padding-bottom: 10px; */
 }
 
 h3 {
